(Fix) Delete button now red, spacing issue in panel rendering fixed

--- a/bucketlist/static/css/account.css
+++ b/bucketlist/static/css/account.css
@@ -15,7 +15,7 @@ button {
 }
 
 .btn-danger {
-  background-color: #653D2E;
+  background-color: #FF4C4C;
 }
 
 .brand {
